chart not visible fix it

--- a/src/FMComponents/status-chart.css
+++ b/src/FMComponents/status-chart.css
@@ -9,7 +9,6 @@
     background-color: #ffffff;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
     height: auto;
-    display: inline-block;
     width: 100%;
     max-width: 350px;
 }
